--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
     "react-redux": "^7.2.5",
+    "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
   }
 }
